<resources>
    <string name="app_name">laby3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mass_kg">Mass [kg]</string>
    <string name="height_cm">Height [cm]</string>
    <string name="count_bmi">Count BMI</string>
    <string name="empty_value" />
    <string name="height_is_empty">Height is empty</string>
    <string name="mass_is_empty">Mass is empty</string>
    <string name="height_is_incorrect">Height is incorrect</string>
    <string name="mass_is_incorrect">Mass is incorrect</string>
    <string name="your_bmi">Your BMI</string>
    <string name="powr_t_do_kalkulatora">Powrót do kalkulatora</string>
    <string name="changeunit">Change unit</string>
    <string name="your_bmi_text_view">Your BMI:</string>
    <string name="defaultValue">0.0</string>
    <string name="title">Title</string>
    <string name="line_1">Line 1</string>
    <string name="line_1">Line 1</string>
</resources>